--- a/进阶关卡——第4关作业.md
+++ b/进阶关卡——第4关作业.md
@@ -6,12 +6,26 @@
     
 ## 基础任务：
 ### 理解多模态大模型的常见设计模式，可以大概讲出多模态大模型的工作原理：
-
-
-按照教程配置环境，准备数据，模型，然后修改config文件：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-50-52.png "2024-11-20%2010-52-40.png")
+        
+        1.多模态研究的重点:
+            不同模态特征空间的对齐：这是多模态研究的核心，意味着需要将不同来源的数据（如图像和文本）的特征空间进行有效的对齐，以便模型能够理解和处理这些数据。
+        2.BLIP 2:
+            模型架构：BLIP 2有两种架构，一种是基于解码器的大型语言模型（例如OPT），另一种是基于编码器-解码器的大型语言模型（例如FlanT5）。
+            工作流程：输入图像通过图像编码器处理，然后通过Q-Former和全连接层，最后通过LLM解码器生成文本。
+        3.Q-Former:
+            类似传统多模态模型：使用三种损失函数（ITM loss、LM loss、ITC loss）。
+            架构设计：共享Self Attention进行模态交融，专家FFN处理差异化模态信息。
+        4.MiniGPT-4:
+            模型架构：结合了Q-Former和ViT，通过线性层将视觉信息转换为文本信息。
+        5.LLaVA:
+            模型架构：使用视觉编码器和语言模型，通过投影层将视觉特征转换为语言模型可以理解的格式。
+        6.LLaVA-1.5-HD:
+            动态分辨率：图像被分割、调整大小、编码，然后展平输入到大型语言模型（LLM）。
+        7.LLaVA-NeXT:
+            动态分辨率：与LLaVA-1.5-HD类似，但具有更强的训练数据。
+        8.为什么使用Q-Former的变少了:
+            收敛速度慢：Q-Former参数量大，训练收敛慢。
+            性能收益不明显：在数据量和计算资源充足的情况下，Q-Former的性能提升不显著。
 
   
 -------------------------------------------------------------------------------------------------------------------
@@ -19,9 +33,20 @@
   
 ### 了解InternVL2的设计模式，可以大概描述InternVL2的模型架构和训练流程：
 
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2010-51-16.png "2024-11-20%2016-23-28.png")
-
+        1.InternViT:
+            模型架构：使用InternLM2-20B、InternViT-6B和MLP。
+            训练方法：通过监督预训练、对比预训练和与LLM联合训练来提升模型性能。
+        2.Pixel Shuffle:
+            技术原理：用于减少高分辨率图像处理中的计算资源消耗，通过调整采样因子来降低token数量。
+        3.Dynamic High-Resolution:
+            预定义的长宽比：根据计算资源，设置最多12个tile，有35种长宽比的排列组合。
+            匹配和分割：选择最接近的长宽比，调整大小后切割成448x448的tiles。
+        4.多任务输出:
+            任务特化embedding：使用VisionLLMv2技术初始化任务特化embedding，用于图像生成、分割、检测等。
+            工作流程：视觉提示和文本提示通过图像编码器和文本分词器处理，然后通过大型语言模型生成各种任务的输出。
+        5.训练:
+            第一阶段：训练MLP，使用高质量预训练数据。
+            第二阶段：ViT+MLP+LLM联合训练，使用高质量
   
 -------------------------------------------------------------------------------------------------------------------
 
