--- a/进阶关卡——第2关作业.md
+++ b/进阶关卡——第2关作业.md
@@ -33,24 +33,27 @@
 -------------------------------------------------------------------------------------------------------------------
 
 
-max_length=2048,batch_size=2微调成功：
+创建multi_agents_api_web_demo.py：
 
   
-![erro](https://github.com/Victory-7291/AI_Lab/blob/main/images/2024-11-23%2011-16-58.png "2024-11-20%2021-42-31.png")
-
-  
--------------------------------------------------------------------------------------------------------------------
-
-
-微调完成：
-
-  
-![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-11-23%2017-28-07.png "2024-11-20%2021-43-08.png")
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-12%2014-29-51.png "2024-11-20%2021-42-31.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
+运行博客优化助手：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-15%2017-46-04.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+### 将Agent应用部署到huggingface space上
+
+  
 权重转换：
 
   
