--- a/进阶关卡——第6关作业.md
+++ b/进阶关卡——第6关作业.md
@@ -1,1 +1,8 @@
+# 进阶关卡——第6关作业.md
+
+## 部署MindSearch到 hugging face Spaces上
+
+###
+直接从internlm的Mindsearch space Duplicate到自己的space
+获取硅基流动api，设置space环境变量SILICON_API_KEY
 
