--- a/进阶关卡——第2关作业.md
+++ b/进阶关卡——第2关作业.md
@@ -54,3 +54,35 @@
 ### 将Agent应用部署到huggingface space上
 
   
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-22-36.png "2024-11-20%2016-23-28.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+运行demo：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-32-16.png "2024-11-20%2021-42-15.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+创建multi_agents_api_web_demo.py：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-32-07.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+运行博客优化助手：
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-31-41.png "2024-11-20%2021-43-08.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
