--- a/进阶关卡——第2关作业.md
+++ b/进阶关卡——第2关作业.md
@@ -53,15 +53,15 @@
 
 ### 将Agent应用部署到huggingface space上
 
-  
+
+把含有weathersearch插件的lagent，app.py，requirements,requirements.txt复制到仓库中，然后push到space中
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-22-36.png "2024-11-20%2016-23-28.png")
 
   
 -------------------------------------------------------------------------------------------------------------------
 
 
-运行demo：
-
+space在building的时候报错找不到requirements/optional.txt和requirements/runtime.txt,可能是因为space和开发机的路径不同
   
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-32-16.png "2024-11-20%2021-42-15.png")
 
@@ -69,7 +69,7 @@
 -------------------------------------------------------------------------------------------------------------------
 
 
-创建multi_agents_api_web_demo.py：
+修改requirements.txt为如下：
 
   
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-32-07.png "2024-11-20%2021-42-31.png")
@@ -78,7 +78,7 @@
 -------------------------------------------------------------------------------------------------------------------
 
 
-运行博客优化助手：
+在space中运行成功：
 
   
 ![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/2024-12-24%2020-31-41.png "2024-11-20%2021-43-08.png")
