--- a/进阶关卡——第4关作业.md
+++ b/进阶关卡——第4关作业.md
@@ -135,3 +135,7 @@
   
 -------------------------------------------------------------------------------------------------------------------
 
+
+# 进阶任务：
+
+## 将训练好的模型上传到huggingface
