--- a/进阶关卡——第4关作业.md
+++ b/进阶关卡——第4关作业.md
@@ -139,3 +139,31 @@
 # 进阶任务：
 
 ## 将训练好的模型上传到huggingface
+
+  
+在终端登录huggingface
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/Screenshot%20from%202025-01-14%2017-21-51.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+创建模型仓库后git clone到开发机，在本地仓库加入权重转换过的模型文件，然后通过镜像站push到huggingface
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/Screenshot%20from%202025-01-14%2020-20-19.png "2024-11-20%2021-43-50.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
+
+huggingface格式的模型文件成功上传到huggingface
+
+  
+![erro](https://github.com/Victory-7291/AI_Lab/raw/main/images/Screenshot%20from%202025-01-14%2020-20-36.png "2024-11-20%2021-42-31.png")
+
+  
+-------------------------------------------------------------------------------------------------------------------
+
